# cockpit

./: .gitignore  README.md  pyproject.toml
cockpit/: __init__.py  __main__.py  cli.py  config.py  models.py  preview.py  store.py
cockpit/commands/: __init__.py  fork.py  info.py  list.py  picker.py  prune.py  search.py  stats.py
tests/: __init__.py
