[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cockpit"
version = "0.1.0"
description = "Manage, search, and clean up GitHub Copilot CLI sessions"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Daniel Meint", email = "danimeint@gmail.com" },
]
dependencies = [
  "click>=8.1",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "ruff>=0.4",
]

[project.scripts]
cockpit = "cockpit.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["cockpit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
